WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130229
[CSSRegions] Inline-block child of content node incorrectly clipped
https://bugs.webkit.org/show_bug.cgi?id=130229
Summary
[CSSRegions] Inline-block child of content node incorrectly clipped
Mihnea Ovidenie
Reported
2014-03-14 01:14:32 PDT
An inline-block child of an inline-block content node is incorrectly clipped to the region boundary.
Attachments
Patch
(6.44 KB, patch)
2014-03-14 01:30 PDT
,
Mihnea Ovidenie
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mihnea Ovidenie
Comment 1
2014-03-14 01:30:09 PDT
Created
attachment 226664
[details]
Patch
Andrei Bucur
Comment 2
2014-03-14 05:12:11 PDT
Comment on
attachment 226664
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2014-03-14 05:49:43 PDT
Comment on
attachment 226664
[details]
Patch Clearing flags on attachment: 226664 Committed
r165615
: <
http://trac.webkit.org/changeset/165615
>
WebKit Commit Bot
Comment 4
2014-03-14 05:49:47 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug