[CSSRegions] Inline-block child of content node incorrectly clipped https://bugs.webkit.org/show_bug.cgi?id=130229

Reviewed by Andrei Bucur.

Source/WebCore:

Constrain the target box rect to the region box rect only if we are able
to determine the region range for box. If we cannot do that, getRegionRangeForBox
returns null values for start and end region and we should not perform the clamping.

Test: fast/regions/inlineblock-child-inlineblock-contentnode-in-region.html

* rendering/RenderRegion.cpp:
(WebCore::RenderRegion::rectFlowPortionForBox):

LayoutTests:

* fast/regions/inlineblock-child-inlineblock-contentnode-in-region-expected.html: Added.
* fast/regions/inlineblock-child-inlineblock-contentnode-in-region.html: Added.


Canonical link: https://commits.webkit.org/148205@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165615 268f45cc-cd09-0410-ab3c-d52691b4dbfc